z-index bug navbar

--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,11 @@ h1, h2, h3, h4, h5 {
   overflow-y: hidden;
 }
 
+.lower-section {
+  z-index: -1;
+  position: relative;
+}
+
 .burger {
   height: 40px;
   width: 40px;
@@ -356,15 +361,10 @@ nav {
   opacity: 1;
 }
 
-.lower-design-projects {
-  z-index: -1;
-  position: relative;
-}
-
 .navigation-white {
   background-color: #fff;
   box-shadow: 12px 2px 8px 0px black;
-  z-index: 1;
+  z-index: 0;
 }
 
 .navigation-black {
