--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -278,15 +278,10 @@ nav {
     // overflow-y: hidden;
 }
 
-.lower-design-projects {
-    z-index: -1;
-    position: relative;
-}
-
 .navigation-white {
     background-color: #fff;
     box-shadow: 12px 2px 8px 0px rgb(0, 0, 0);
-    z-index: 1;
+    z-index: 0;
 }
 
 .navigation-black {
